# whisper-local

./: .dockerignore  Dockerfile  app.py  download_whisper.py  pyproject.toml  start.sh  utils.py  worker.py
